--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,5 +14,17 @@
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
-  "plugins": ["@typescript-eslint"]
+  "settings": {
+    "import/resolver": {
+      "node": {
+        "extensions": [
+          ".js",
+          ".ts"
+        ]
+      }
+    }
+  },
+  "plugins": [
+    "@typescript-eslint"
+  ]
 }
